--- a/as-api/src/main/resources/files/style.css
+++ b/as-api/src/main/resources/files/style.css
@@ -1,3 +1,53 @@
+:root {
+  --as-light: #e8eceb;
+  --as-dark: #2d3e4e;
+  --as-primary: #8cbdb9;
+  --as-secondary: #e09e50;
+}
+
+html {
+  background-color: white;
+}
+
+body {
+  /* background-color: white;
+  border-radius: 5px 5px 5px 5px; */
+  font-family: Helvetica, sans-serif;
+  border-color: var(--as-dark);
+}
+
+hr {
+  border-radius: 1px;
+  border-style: solid;
+  color: var(--as-dark);
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+h1 {
+  color: var(--as-dark);
+}
+
+.mainContent {
+  margin: 2rem;
+}
+
+.headerLink {
+  margin-right: 1rem;
+  white-space: nowrap;
+}
+
+.loginBox {
+  max-width: 15rem;
+  margin: 3rem auto auto auto;
+}
+
+
+.centered {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Background color */
 
 .bg-green-100 {
@@ -21,25 +71,33 @@
 }
 
 /* Margin */
-.m-4 {
-  margin: 1rem;
+
+.ml-0\.5 {
+  margin-left: 0.5rem;
 }
 
 .ml-1 {
-  margin-left: 0.25rem;
+  margin-left: 1rem;
+}
+
+.ml-2 {
+  margin-left: 2rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-1 {
+  margin-right: 1rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
 }
 
 /* Padding */
 .px-4 {
   padding-left : 1rem;
   padding-right: 1rem;
-}
-
-/* Flex */
-.flex {
-  display: flex;
-}
-
-.space-between {
-  justify-content: space-between;
 }
