--- a/as-api/src/main/resources/templates/header.hbs
+++ b/as-api/src/main/resources/templates/header.hbs
@@ -1,26 +1,29 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
 </head>
 
 <body>
 
-  <div class="m-4">
+  <div style="padding: 0 1rem 1rem 1rem;">
     <h1>Aksjesimulator</h1>
 
-    <div class="flex space-between">
+    <div style="display: flex; justify-content: space-between">
       <div>
-        <a class="ml-1" href="/">Hjem</a>
-        <a class="ml-1" href="/accounts">Kontoer</a>
-        <a class="ml-1" href="/stocks">Aksjer</a>
+        <a class="headerLink" href="/simple/accounts">Kontoer</a>
+        <a class="headerLink" href="/simple/stocks">Aksjer</a>
       </div>
       <div>
-        <a class="ml-1" href="/profile">Profil</a>
-        <a class="ml-1" href="/log-in">Logg inn</a> 
-        <a class="ml-1" href="/log-out">Logg ut</a>
+        <a class="headerLink" href="/simple/profile">Profil</a>
+        <a class="headerLink" href="/simple/login">Logg inn</a>
+        <a class="headerLink" href="/simple/logout">Logg ut</a>
       </div>
     </div>
 
   </div>
   <hr />
+
+  <div class="mainContent">
