--- a/as-api/src/main/resources/templates/header.hbs
+++ b/as-api/src/main/resources/templates/header.hbs
@@ -9,17 +9,24 @@
 <body>
 
   <div style="padding: 0 1rem 1rem 1rem;">
-    <h1>Aksjesimulator</h1>
+    <a href="/simple"><h1>Aksjesimulator</h1></a>
 
     <div style="display: flex; justify-content: space-between">
       <div>
+        {{#username}}
         <a class="headerLink" href="/simple/accounts">Kontoer</a>
         <a class="headerLink" href="/simple/stocks">Aksjer</a>
+        {{/username}}
       </div>
       <div>
+        {{#username}}
         <a class="headerLink" href="/simple/profile">Profil</a>
-        <a class="headerLink" href="/simple/login">Logg inn</a>
         <a class="headerLink" href="/simple/logout">Logg ut</a>
+        {{/username}}
+        {{^username}}
+        <a class="headerLink" href="/simple/login">Logg inn</a>
+        {{/username}}
+        
       </div>
     </div>
 
