--- a/as-api/src/main/resources/templates/account.hbs
+++ b/as-api/src/main/resources/templates/account.hbs
@@ -2,28 +2,28 @@
 
 <div class="mainContent">
 
-  <h2>Konto: {{account.name}}</h1>
+  <h2>Konto: {{account.name}}</h2>
 
     <p>Balanse: {{account.balance}} NOK</p>
 
     <table>
       <caption>Beholdning</caption>
       <tr>
-        <th>Ticker</th>
         <th>Navn</th>
         <th>Antall</th>
-        <th>GAV</th>
-        <th>Verdi</th>
+        <th>GAV <small>(NOK)</small></th>
+        <th>Verdi <small>(NOK)</small></th>
       </tr>
+
       {{#account.holdings}}
         <tr>
-          <td>{{ticker.ticker}}</td>
-          <td>{{ticker.name}}</td>
+          <td>{{stock.name}}</td>
           <td>{{amount}}</td>
           <td>{{gav}}</td>
-          <td>{{ticker.price}}</td>
+          <td>{{stock.price}}</td>
         </tr>
       {{/account.holdings}}
+
     </table>
 
 </div>
