--- a/as-api/src/main/resources/templates/header.hbs
+++ b/as-api/src/main/resources/templates/header.hbs
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/mobile.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
 </head>
 
@@ -11,25 +12,26 @@
   <div style="padding: 0 1rem 1rem 1rem;">
     <h1>Aksjesimulator</h1>
 
-    <div style="display: flex; justify-content: space-between">
+    <nav>
       <div>
         {{#username}}
         <a class="headerLink" href="/simple/accounts">Kontoer</a>
         <a class="headerLink" href="/simple/stocks">Aksjer</a>
         {{/username}}
+
+        <div class="headerLinksRight">
+          <a class="headerLink" href="/simple/faq">FAQ</a>
+          {{#username}}
+          <a class="headerLink" href="/simple/profile">Profil</a>
+          <a class="headerLink" href="/simple/logout">Logg ut</a>
+          {{/username}}
+          {{^username}}
+          <a class="headerLink" href="/simple/login">Logg inn</a>
+          {{/username}}
+
+        </div>
       </div>
-      <div>
-        <a class="headerLink" href="/simple/faq">FAQ</a>
-        {{#username}}        
-        <a class="headerLink" href="/simple/profile">Profil</a>
-        <a class="headerLink" href="/simple/logout">Logg ut</a>
-        {{/username}}
-        {{^username}}
-        <a class="headerLink" href="/simple/login">Logg inn</a>
-        {{/username}}
-        
-      </div>
-    </div>
+    </nav>
 
   </div>
   <hr />
