--- a/as-api/src/main/resources/files/style.css
+++ b/as-api/src/main/resources/files/style.css
@@ -14,14 +14,13 @@ body {
   border-radius: 5px 5px 5px 5px; */
   font-family: Helvetica, sans-serif;
   border-color: var(--as-dark);
+  margin: 0 0.5rem 1rem 0.5rem;
 }
 
 hr {
   border-radius: 1px;
   border-style: solid;
   color: var(--as-dark);
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 h1 {
@@ -41,12 +40,7 @@ td, th {
   border-bottom: 1px solid var(--as-light);
 }
 
-.mainContent {
-  margin: 2rem;
-}
-
 .headerLink {
-  margin-right: 1rem;
   white-space: nowrap;
 }
 
@@ -54,14 +48,16 @@ td, th {
   float: right;
 }
 
+.pageContent {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50rem;
+  width: 100%;
+}
+
 .loginBox {
   max-width: 15rem;
   margin: 3rem auto auto auto;
-}
-
-.centered {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* Background color */
@@ -107,6 +103,10 @@ td, th {
 
 .mr-1 {
   margin-right: 1rem;
+}
+
+.mr-2 {
+  margin-right: 2rem;
 }
 
 .mt-1 {
